a bit of controller/view cleanup

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Edit.cshtml
@@ -45,12 +45,12 @@
                 &nbsp;@Html.ActionLink("Cancel", "Show", new { id = Model.Id })
             </div>
             <div id="divSaveMessage"></div>
+            <hr style="border-color: #bbb;" />
         </div>
     }
     <br style="clear:both" />
     <div style="float:left">
-        <br />
-        Recent Budget+Percents
+        Budget+Percents
         <table>
             <tr>
                 <th></th>
