--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtraItems/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtraItems/Index.cshtml
@@ -17,6 +17,7 @@
     <div style="margin-bottom:10px">
     <form>
         @Html.DropDownList("month", (SelectList)ViewBag.ChooseMonthSelectList, new { onchange = "ChangeMonth(this.value)" })
+        &nbsp;[@Html.ActionLink("show all months", "Index", new { campId = campId })]
     </form>
     </div>
 } else {
