--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/TDads/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/TDads/Index.cshtml
@@ -1,14 +1,20 @@
 ﻿@model  IEnumerable<DirectAgents.Domain.Entities.TD.TDad>
+@{
+    bool showImages = ViewBag.ShowImages;
+}
 <h2>Creatives</h2>
 
 <table>
     <tr>
         <th></th>
-        <th>Id</th>
+        <th>ID</th>
         <th>Name</th>
         <th>Width</th>
         <th>Height</th>
         <th>ExternalId</th>
+    @if (showImages) {
+        <th></th>
+    }
         <th>URL</th>
     </tr>
     @foreach (var ad in Model)
@@ -20,6 +26,14 @@
             <td>@ad.Width</td>
             <td>@ad.Height</td>
             <td>@ad.ExternalId</td>
+        @if (showImages) {
+            <td>
+                @if (!string.IsNullOrWhiteSpace(ad.Url))
+                {
+                    <img src="@ad.Url" width="100" />
+                }
+            </td>
+        }
             <td>
                 @if (!string.IsNullOrWhiteSpace(ad.Url))
                 {
