new logo + login page

--- a/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
@@ -23,7 +23,7 @@ body {
 .logo {
 	height: 100px;
 	width: 26%;
-	background: url("../Images/da_logo.jpg") #52AAE3;
+	background: url("../Images/da_logo2016.jpg") #52AAE3;
 	border-top: 4px solid #2d599d;
 	border-left: groove 2px #77C0E7;
 	margin-top: -4px;
