--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/TDads/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/TDads/Index.cshtml
@@ -7,11 +7,10 @@
 <table>
     <tr>
         <th></th>
-        <th>ID</th>
+        <th>ID / ExtID</th>
         <th>Name</th>
         <th>Width</th>
         <th>Height</th>
-        <th>ExternalId</th>
     @if (showImages) {
         <th></th>
     }
@@ -21,11 +20,10 @@
     {
         <tr>
             <td>@Html.ActionLink("Edit", "Edit", new { id = ad.Id })</td>
-            <td>@ad.Id</td>
+            <td style="text-align:center">@ad.Id<br />@ad.ExternalId</td>
             <td>@ad.Name</td>
             <td>@ad.Width</td>
             <td>@ad.Height</td>
-            <td>@ad.ExternalId</td>
         @if (showImages) {
             <td>
                 @if (!string.IsNullOrWhiteSpace(ad.Url))
