--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
@@ -17,7 +17,7 @@
       +---------+-->*@
 <div class="row fullWidth" style="height: 100px">
     <div class="large-5 columns toplogo">
-        <img src="~/Images/logo1a.png" />
+        <img src="~/Images/da_logo2016_bluegrey.png" />
     </div>
     <div class="large-2 columns topinfo">
         @Html.Partial("_HelloPartial", Model.HasLogo)
@@ -93,7 +93,7 @@
     <div class="large-12 columns">
         <div class="row">
             <div class="large-6 columns">
-                <p>&copy; 2015 Direct Agents</p>
+                <p>&copy; 2016 Direct Agents</p>
             </div>
             <div class="large-6 columns">
             </div>
