--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal2016.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Portal2016.cshtml
@@ -9,6 +9,7 @@
 <link href="https://kendo.cdn.telerik.com/2016.1.406/styles/kendo.bootstrap.min.css" rel="stylesheet" />
 
 <link href='~/Content/progstyle2.css' rel="stylesheet" type="text/css" />
+<link href='~/Content/portal2016.css' rel="stylesheet" type="text/css" />
 
 <script src="https://kendo.cdn.telerik.com/2016.1.406/js/jquery.min.js"></script>
 <script src="https://kendo.cdn.telerik.com/2016.1.406/js/kendo.all.min.js"></script>
