--- a/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle2.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle2.css
@@ -14,6 +14,18 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+#cssmenu #menu-button.menu-opened:before {
+    position: absolute;
+    top: 16px;
+    right: 17px;
+    display: block;
+    height: 2px;
+    width: 20px;
+    border-top: 0px solid #dddddd;
+    border-bottom: 0px solid #dddddd;
+    content: '';
+  }
+
 #cssmenu:after,
 #cssmenu > ul:after {
   content: ".";
@@ -376,8 +388,17 @@
    color:#5391c9;
 }
 
+#container {
+  width: 95%;
+  max-width: none !important;
+}
+
 
 @media all and (max-width: 768px), only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min--moz-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (-o-min-device-pixel-ratio: 2/1) and (max-width: 1024px), only screen and (min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min-resolution: 192dpi) and (max-width: 1024px), only screen and (min-resolution: 2dppx) and (max-width: 1024px) {
+
+  #container {
+    width: 100%;
+  }
 
   .logo {
     width: 100%;
